Implemented /consensus endpoint
