# daemon/algod/api/swagger.json
@@ -44,6 +44,43 @@
         }
       }
     },
+    "/consensus": {
+      "get": {
+        "description": "Returns the protocol consensus information.",
+        "tags": [
+          "common"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "summary": "Gets the protocol consensus information.",
+        "operationId": "GetConsensus",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "version",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The protocol consensus details in json.",
+            "schema": {
+              "type": "string"
+            }
+          },
+	  "404": {
+            "description": "version not found"
+          },
+          "default": {
+            "description": "Unknown Error"
+          }
+        }
+      }
+    },
     "/health": {
       "get": {
         "produces": [
